--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,10 +1,5 @@
-@font-face {
-  font-family: 'AcademicM54';
-  src: url('../font/AcademicM54.ttf') format('truetype');
-}
-
 body {
-  font-family: 'AcademicM54';
+  font-family: 'Times New Roman', Times, serif;
 }
 
 @font-face {
@@ -36,7 +31,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 80vh;
+  height: 70vh;
   /* 100% da altura da viewport */
 }
 
@@ -49,6 +44,23 @@ body {
 .title {
   font-family: 'Mechsuit', sans-serif;
   text-align: center;
+}
+
+/* Estilos para o ícone de olho e o contêiner de senha */
+.password-container {
+  position: relative;
+}
+
+.toggle-password {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  width: 20px;
+  /* Largura desejada para o ícone de olho */
+  height: auto;
+  /* Altura ajustada automaticamente */
 }
 
 /* Estilos para os cards */
