--- a/www/css/index.css
+++ b/www/css/index.css
@@ -117,6 +117,6 @@ body {
 
 /* PAGINA DE CADASTRO */
 
-#nomeAluno[disabled], #generoAluno [disabled]{
-  color: black !important;
+.custom-form {
+  margin: 0 20px; /* Adicione a margem desejada nas laterais */
 }
